# deepcell-tf

./: .coveragerc  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.rst  deepcell_image_setup.sh  documentation.md  ecoli_kc_run.py  ecoli_train.py  model_reconstitution_test.py  model_trainer_test.py  mousebrain_train.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py  start_docker.sh  test.py
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_requeset.md
.github/workflows/: docker-image.yaml  lint.yaml  pypi.yaml  release-drafter.yaml  test-docs.yaml  tests.yaml
deepcell/: .model_zoo.py.swp  __init__.py  __version__.py  _version.py  callbacks.py  callbacks_test.py  dc_custom_layers.py  dc_data_functions.py  dc_export_functions.py  dc_helper_functions.py  dc_model_zoo.py  dc_plotting_functions.py  dc_running_functions.py  dc_training_functions.py  graph_utils.py  graph_utils_tests.py  image_generators.py  image_generators_test.py  initializers.py  initializers_test.py  losses.py  losses_test.py  metrics.py  metrics_test.py  mibi_data_generator.py  mibi_data_help.py  model_trainer.py  model_zoo.py  running.py  running_test.py  segmentation_application.py  settings.py  stack_generator.py  tmp_funcs.py  tracking.py  tracking_test.py  training.py
deepcell_scripts/: ecoli.py  mousebrain.py  mousebrain_train.py
deepcell_tf/: Dockerfile  LICENSE.txt  requirements.txt  setup.py
docs/: Makefile  requirements-docs.txt  requirements-rtd.txt  rtd-requirements.txt
notebooks/: Celltype_classification.ipynb  DeepWatershed - Nuclear Regression.ipynb  Equivariance.ipynb  Nuclear Segmentation - DeepWatershed.ipynb  Training-Segmentation.ipynb  dvv2.ipynb  plotting.ipynb  testing.ipynb  tissue.ipynb
scripts/: DeepWatershed - Nuclear Regression.ipynb  Discriminative Loss 2D with FG-BG Separation.ipynb  Discriminative Loss with FG:BG Separation.ipynb  Discriminative loss notebook 1.ipynb  Discriminative loss notebook 2 - Include FG and BG separation.ipynb  General_Nuclei_Network.ipynb  Nuclear-Application.ipynb  Training-Segmentation.ipynb  Watershed Transform 2D with FG-BG Separation.ipynb  debug.txt  ecoli.py  mibi.py  mousebrain.py  print_debug.py  retinanet_train.py  watershed.py
(+535 files in other folders)
