[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "wheel",
    "setuptools>=40.8.0",
    "numpy>=1.16.6"
]

[tool.ruff]
line-length = 99

ignore = []

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"deepcell/image_generators/__init__.py" = ["E402"]  # Ignore out-of-order import
