[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "wheel",
    "setuptools>=40.8.0",
    "numpy>=1.16.6"
]

[tool.ruff]
select = ["E", "F", "UP"]
line-length = 99

target-version="py37"

# Suppress remaining bound lambda warnings
ignore = ["E731"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"docs/source/conf.py" = ["E402", "E501"]

# Re-exports from deepcell-toolbox/deepcell-tracking: ignore unused import warnings
"deepcell/metrics.py" = ["F401"]
"deepcell/model_zoo/featurenet.py" = ["F401"]
"deepcell/tracking.py" = ["F401"]
"deepcell/utils/tracking_utils.py" = ["F401"]

# Out-of-order imports due to pkg-level definitions
"deepcell/image_generators/__init__.py" = ["E402"]
"deepcell/datasets/__init__.py" = ["E402"]

# TODO: Expire deprecation and remove this filter
"deepcell/applications/multiplex_segmentation.py" = ["F401"]
# TODO: Add tests or delete file, see gh-641
"deepcell/model_zoo/tracking_test.py" = ["F401"]
# TODO: Define split_datasets in module to fix circular import - see gh-642
"deepcell/data/__init__.py" = ["E402"]
# TODO: Remove once gh-645 is resolved
"deepcell/utils/export_utils.py" = ["F821"]
